--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -13,6 +13,8 @@ builds:
       - linux
       - windows
       - darwin
+  - ldflags:
+      - "-X main.version={{.Version}}"
 
 archives:
   - format: tar.gz
