環境変数に機密情報が設定されていないか確認する項目を追加

--- a/rules.yaml
+++ b/rules.yaml
@@ -43,6 +43,10 @@ rules:
     service: ECS
     level: Warning
     issue: Propagate tags is not set
+  ecs-sensitive-environment-variables:
+    service: ECS
+    level: Alert
+    issue: Sensitive information (e.g., PASSWORD, TOKEN) found in environment variables. Use Secrets Manager or Parameter Store instead.
   ecs-exec-logging:
     service: ECS
     level: Warning
